# api-cartoes-teste-atual

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  usuario.py  usuario_model.py  usuario_schema.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: cartao.py
app/api/v1/endpoints/responses/: cartao_responses.py
app/core/: auth.py  configs.py  deps.py  security.py
app/core/messaging/: connection.py  consumer.py
app/database/: base.py
app/migrations/: env.py
app/migrations/versions/: 507f4db4bc68_criada_a_tabela_cartoes.py  593378723ee5_adicionada_a_tabela_cartoes.py  fb0205e6febf_adicionada_a_tabela_cartoes.py
app/models/: cartao_model.py
app/schemas/: cartao_schema.py
app/services/: cartao_services.py
app/services/messaging/: producer.py
tests/: teste_cartao.py
